Name:                release
Version:             0.1
License:             BSD3
License-file:        LICENSE
Category:            Web
Build-type:          Simple

Cabal-version:       >=1.2


Executable sdist-check
  Main-is:             sdist-check.hs
  Build-depends:       base >= 4 && < 5
                     , transformers >= 0.2 && < 0.3
                     , conduit >= 0.3 && < 0.4
                     , zlib-conduit >= 0.3 && < 0.4
                     , tar >= 0.4 && < 0.5
                     , bytestring
                     , containers
                     , text
                     , system-filepath >= 0.4 && < 0.5
                     , system-fileio >= 0.3 && < 0.4
                     , http-types >= 0.6.10 && < 0.7
                     , http-conduit >= 1.3 && < 1.4
  ghc-options: -Wall -Werror
